<resources>
    <string name="app_name">Flashcard</string>
    <string name="president_question">Who is the 44th President of the United States</string>
    <string name="president_answer">Barack Obama</string>
    <string name="output_hint">Enter The Answer Here</string>
    <string name="input_hint">Enter The Question Here</string>
    <string name="cancel_desc">Cancel Button</string>
    <string name="add_desc">Add Button</string>
    <string name="save_desc">Save Button</string>
    <string name="next_button">Next Button</string>
    <string name="delete_button">Delete Button</string>
</resources>
